--- a/client/index.html
+++ b/client/index.html
@@ -147,8 +147,8 @@
 
 
   <!-- scripts do Bootstrap -->
+  <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
   <script src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
-  <script src="../node_modules/popper.js/dist/popper-utils.min.js"></script>
   <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <!-- scripts do Bootstrap -->
 </body>
